--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,10 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  djetzen
 
+collections:
+  books:
+    output: true
+
 # Build settings
 markdown: kramdown
 theme: minima
